--- a/composer.json
+++ b/composer.json
@@ -7,10 +7,19 @@
         "php": ">=7.2.5",
         "ext-ctype": "*",
         "ext-iconv": "*",
+        "composer/package-versions-deprecated": "1.11.99.1",
+        "doctrine/doctrine-bundle": "^2.2",
+        "doctrine/doctrine-migrations-bundle": "^3.0",
+        "doctrine/orm": "^2.8",
+        "symfony/browser-kit": "5.2.*",
         "symfony/console": "5.2.*",
+        "symfony/css-selector": "5.2.*",
         "symfony/dotenv": "5.2.*",
         "symfony/flex": "^1.3.1",
         "symfony/framework-bundle": "5.2.*",
+        "symfony/http-client": "5.2.*",
+        "symfony/maker-bundle": "^1.25",
+        "symfony/phpunit-bridge": "^5.2",
         "symfony/yaml": "5.2.*"
     },
     "require-dev": {
