--- a/composer.json
+++ b/composer.json
@@ -8,9 +8,11 @@
         "ext-ctype": "*",
         "ext-iconv": "*",
         "composer/package-versions-deprecated": "1.11.99.1",
+        "doctrine/annotations": "^1.0",
         "doctrine/doctrine-bundle": "^2.2",
         "doctrine/doctrine-migrations-bundle": "^3.0",
         "doctrine/orm": "^2.8",
+        "phpdocumentor/reflection-docblock": "^5.2",
         "symfony/browser-kit": "5.2.*",
         "symfony/console": "5.2.*",
         "symfony/css-selector": "5.2.*",
@@ -20,6 +22,9 @@
         "symfony/http-client": "5.2.*",
         "symfony/maker-bundle": "^1.25",
         "symfony/phpunit-bridge": "^5.2",
+        "symfony/property-access": "5.2.*",
+        "symfony/property-info": "5.2.*",
+        "symfony/serializer": "5.2.*",
         "symfony/yaml": "5.2.*"
     },
     "require-dev": {
