--- a/composer.json
+++ b/composer.json
@@ -21,6 +21,7 @@
         "symfony/framework-bundle": "5.2.*",
         "symfony/http-client": "5.2.*",
         "symfony/maker-bundle": "^1.25",
+        "symfony/monolog-bundle": "^3.6",
         "symfony/phpunit-bridge": "^5.2",
         "symfony/property-access": "5.2.*",
         "symfony/property-info": "5.2.*",
